--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         }
 
         .article {
-            background-color: crimson;
+            background-color: rgb(62, 151, 39);
             padding: 10px;
             width: 1000px;
             height: 425px;
